--- a/src/main/res/layout/beigeaccounting.xml
+++ b/src/main/res/layout/beigeaccounting.xml
@@ -83,4 +83,11 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" />
 
+  <Button
+    android:id="@+id/btnShare"
+    android:gravity="center_horizontal"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:text="@string/share" />
+
 </LinearLayout>
