--- a/src/main/res/layout/beigeaccounting.xml
+++ b/src/main/res/layout/beigeaccounting.xml
@@ -1,93 +1,125 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  android:orientation="vertical"
   xmlns:tools="http://schemas.android.com/tools"
   tools:context="org.beigesoft.accandr.Bsa" >
-
-  <TextView
-    android:labelFor="@+id/etAjettyIn"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/ajettyNumber" />
-
-  <EditText
-    android:id="@+id/etAjettyIn"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:inputType="number" />
-
-  <TextView
-    android:labelFor="@+id/etKsPassw"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/ksPassw" />
-
-  <EditText
-    android:id="@+id/etKsPassw"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:inputType="textPassword" />
-
-  <TextView
-    android:labelFor="@+id/etKsPasswRep"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/ksPasswRep" />
-
-  <EditText
-    android:id="@+id/etKsPasswRep"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:inputType="textPassword" />
 
   <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal" >
+    android:orientation="vertical" >
 
     <TextView
-      android:layout_width="0dp"
+      android:labelFor="@+id/etAjettyIn"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_weight="1"
-      android:text="@string/port" />
-    
+      android:text="@string/ajettyNumber" />
+
+    <EditText
+      android:id="@+id/etAjettyIn"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="number" />
+
+    <TextView
+      android:labelFor="@+id/etKsPassw"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/ksPassw" />
+
+    <EditText
+      android:id="@+id/etKsPassw"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="textPassword" />
+
+    <TextView
+      android:labelFor="@+id/etKsPasswRep"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/ksPasswRep" />
+
+    <EditText
+      android:id="@+id/etKsPasswRep"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:inputType="textPassword" />
+
+    <LinearLayout
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:orientation="horizontal" >
+
+      <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="@string/port" />
+      
+      <Spinner
+        android:id="@+id/cmbPort"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <Button
+      android:id="@+id/btnPrivacy"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/privTitle" />
+
+    <Button
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/btnStop"
+      android:text="@string/stop" />
+
+    <Button
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:id="@+id/btnStart"
+      android:text="@string/start" />
+
+    <Button
+      android:id="@+id/btnStartBrowser"
+      android:gravity="center_horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content" />
+
+    <Button
+      android:id="@+id/btnExpCaCe"
+      android:gravity="center_horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/expCaCe" />
+
     <Spinner
-      android:id="@+id/cmbPort"
+      android:id="@+id/cmbExpLog"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" />
 
+    <Button
+      android:id="@+id/btnExpLog"
+      android:gravity="center_horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/expLog" />
+
+    <Button
+      android:id="@+id/btnImpSqlite"
+      android:gravity="center_horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/ImpSqlite" />
+
+    <Button
+      android:id="@+id/btnPerm"
+      android:gravity="center_horizontal"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:text="@string/permTi" />
+
   </LinearLayout>
 
-  <Button
-    android:id="@+id/btnPrivacy"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/privTitle" />
-
-  <Button
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/btnStop"
-    android:text="@string/stop" />
-
-  <Button
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/btnStart"
-    android:text="@string/start" />
-
-  <Button
-    android:id="@+id/btnStartBrowser"
-    android:gravity="center_horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
-
-  <Button
-    android:id="@+id/btnShare"
-    android:gravity="center_horizontal"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/share" />
-
-</LinearLayout>
+</ScrollView>
